--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/Final Logo.png" />
+    <link rel="icon" type="image/png" href="/Final.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PrepZon</title>
   </head>
